fix: overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,7 +81,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
